removed isBlank util; inlined Tuple utility-record; fixed test-case